force-app/main/default/objects/Business_Continuity__c/Business_Continuity__c.object-meta.xml
<CustomObject>
    <description>Object to track business impact of major disruptive events</description>
    <label>Business Continuity</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Event Impact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Continuity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>