force-app/main/default/objects/Business_Continuity__c/fields/Are_priorities_on_track_for_2020__c.field-meta.xml
<CustomField>
    <fullName>Are_priorities_on_track_for_2020__c</fullName>
    <label>Are priorities on track for 2020?</label>
    <type>TextArea</type>
</CustomField>