force-app/main/default/objects/Business_Continuity__c/fields/Attrition_risk_before_COVID_19__c.field-meta.xml
<CustomField>
    <fullName>Attrition_risk_before_COVID_19__c</fullName>
    <label>Attrition risk before COVID-19?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>