force-app/main/default/objects/Business_Continuity__c/fields/Closed_Discontinued__c.field-meta.xml
<CustomField>
    <fullName>Closed_Discontinued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed/Discontinued</label>
    <type>Checkbox</type>
</CustomField>