force-app/main/default/objects/Business_Continuity__c/fields/Cloud_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Suspension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloud Suspension</label>
    <type>Checkbox</type>
</CustomField>