force-app/main/default/objects/Business_Continuity__c/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <formula>Contact_Name__r.Owner.FirstName &amp; &quot; &quot; &amp; Contact_Name__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner</label>
    <type>Text</type>
</CustomField>