force-app/main/default/objects/Business_Continuity__c/fields/Contact_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Email__c</fullName>
    <formula>Contact_Name__r.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Email</label>
    <type>Text</type>
</CustomField>