force-app/main/default/objects/Business_Continuity__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <formula>Contact_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone Number</label>
    <type>Text</type>
</CustomField>