force-app/main/default/objects/Business_Continuity__c/fields/Created_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Email</label>
    <type>Text</type>
</CustomField>