force-app/main/default/objects/Business_Continuity__c/fields/Customer_Approval__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval__c</fullName>
    <label>Customer Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>