force-app/main/default/objects/Business_Continuity__c/fields/Customer_Feedback_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_1__c</fullName>
    <inlineHelpText>What are your other vendors doing for you? What is it you would like us to do? What other ideas have you thought of?</inlineHelpText>
    <label>Customer Feedback 1</label>
    <type>TextArea</type>
</CustomField>