force-app/main/default/objects/Business_Continuity__c/fields/Customer_Feedback_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_2__c</fullName>
    <inlineHelpText>Would it help extending payment terms by 30 days?</inlineHelpText>
    <label>Customer Feedback 2</label>
    <type>TextArea</type>
</CustomField>