force-app/main/default/objects/Business_Continuity__c/fields/Date_of_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Conversation__c</fullName>
    <label>Date of Conversation</label>
    <type>Date</type>
</CustomField>