force-app/main/default/objects/Business_Continuity__c/fields/Date_of_customer_response__c.field-meta.xml
<CustomField>
    <fullName>Date_of_customer_response__c</fullName>
    <label>Date of customer response</label>
    <type>Date</type>
</CustomField>