force-app/main/default/objects/Business_Continuity__c/fields/Decline_offers_asking_for_addl_relief__c.field-meta.xml
<CustomField>
    <fullName>Decline_offers_asking_for_addl_relief__c</fullName>
    <label>Decline offers &amp; asking for addl relief?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>