force-app/main/default/objects/Business_Continuity__c/fields/Discuss_offers_upgrades_with_customer__c.field-meta.xml
<CustomField>
    <fullName>Discuss_offers_upgrades_with_customer__c</fullName>
    <label>Discuss offers/upgrades with customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>