force-app/main/default/objects/Business_Continuity__c/fields/Enterprise_Name__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Name__c</fullName>
    <formula>Account__r.MDM_Enterprise_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enterprise Name</label>
    <type>Text</type>
</CustomField>