force-app/main/default/objects/Business_Continuity__c/fields/Enterprise_Number__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Number__c</fullName>
    <formula>Account__r.MDM_Enterprise_Nbr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enterprise Number</label>
    <type>Text</type>
</CustomField>