force-app/main/default/objects/Business_Continuity__c/fields/Essentials_30_Day_Deferral__c.field-meta.xml
<CustomField>
    <fullName>Essentials_30_Day_Deferral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Essentials 30 Day Deferral</label>
    <type>Checkbox</type>
</CustomField>