force-app/main/default/objects/Business_Continuity__c/fields/Essentials_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Essentials_Opportunity_Number__c</fullName>
    <label>Essentials Opportunity Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>