force-app/main/default/objects/Business_Continuity__c/fields/Further_Approval__c.field-meta.xml
<CustomField>
    <fullName>Further_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Further Approval</label>
    <type>Checkbox</type>
</CustomField>