force-app/main/default/objects/Business_Continuity__c/fields/If_Yes_how_many_extra_months__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_how_many_extra_months__c</fullName>
    <label>If Yes – how many extra months?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>