force-app/main/default/objects/Business_Continuity__c/fields/Impact_Category__c.field-meta.xml
<CustomField>
    <fullName>Impact_Category__c</fullName>
    <label>Impact Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Integrity</fullName>
            </value>
            <value>
                <fullName>Restoration Priority</fullName>
            </value>
            <value>
                <fullName>Quoting Turnaround</fullName>
            </value>
            <value>
                <fullName>Installation Scheduling</fullName>
            </value>
            <value>
                <fullName>Maintenance Fix/Break Scheduling</fullName>
            </value>
            <value>
                <fullName>Offer Integrity</fullName>
            </value>
            <value>
                <fullName>Business Project Slowdown</fullName>
            </value>
            <value>
                <fullName>BAU/None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>