force-app/main/default/objects/Business_Continuity__c/fields/Is_there_oppty_to_attach_NCR_payments__c.field-meta.xml
<CustomField>
    <fullName>Is_there_oppty_to_attach_NCR_payments__c</fullName>
    <label>Is there oppty to attach NCR payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>