force-app/main/default/objects/Business_Continuity__c/fields/Maintenance_Helpdesk__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Helpdesk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance/Helpdesk</label>
    <type>Checkbox</type>
</CustomField>