force-app/main/default/objects/Business_Continuity__c/fields/Monthly_NCR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_NCR_Revenue__c</fullName>
    <label>Average Revenue per Site</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>