force-app/main/default/objects/Business_Continuity__c/fields/Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offer_Amount__c</fullName>
    <label>Offer Amount</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>