force-app/main/default/objects/Business_Continuity__c/fields/Payments_for_1_Month_Addl_Relief__c.field-meta.xml
<CustomField>
    <fullName>Payments_for_1_Month_Addl_Relief__c</fullName>
    <label>Payments for 1 Month Addl Relief?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>