force-app/main/default/objects/Business_Continuity__c/fields/POSaaS_30_Day_Deferral__c.field-meta.xml
<CustomField>
    <fullName>POSaaS_30_Day_Deferral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POSaaS 30 Day Deferral</label>
    <type>Checkbox</type>
</CustomField>