force-app/main/default/objects/Business_Continuity__c/fields/POSaaS_Suspension__c.field-meta.xml
<CustomField>
    <fullName>POSaaS_Suspension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POSaaS Suspension</label>
    <type>Checkbox</type>
</CustomField>