force-app/main/default/objects/Business_Continuity__c/fields/Proposed_Offer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Offer_Detail__c</fullName>
    <label>Proposed Offer Detail</label>
    <type>TextArea</type>
</CustomField>