force-app/main/default/objects/Business_Continuity__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel Service</fullName>
            </value>
            <value>
                <fullName>Extend Payment Terms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Suspend Billing</fullName>
            </value>
            <value>
                <fullName>Add Service</fullName>
                <isActive>false</isActive>
                <label>Add Service</label>
            </value>
            <value>
                <fullName>Discount</fullName>
                <isActive>false</isActive>
                <label>Discount</label>
            </value>
            <value>
                <fullName>Rebate</fullName>
                <isActive>false</isActive>
                <label>Rebate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>