force-app/main/default/objects/Business_Continuity__c/fields/RVP_approval__c.field-meta.xml
<CustomField>
    <fullName>RVP_approval__c</fullName>
    <label>RVP approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>