force-app/main/default/objects/Business_Continuity__c/fields/Suspend_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Suspend_Billing_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspend Billing Email</label>
    <type>Checkbox</type>
</CustomField>