force-app/main/default/objects/Business_Continuity__c/fields/Suspension_Relief_Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Relief_Number_of_Months__c</fullName>
    <label>Suspension Relief - Number of Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>