force-app/main/default/objects/Business_Continuity__c/fields/What_business_changes_will_cust_make__c.field-meta.xml
<CustomField>
    <fullName>What_business_changes_will_cust_make__c</fullName>
    <label>What business changes will cust make?</label>
    <type>TextArea</type>
</CustomField>