force-app/main/default/objects/Business_Continuity__c/fields/What_is_potential_existing_rev_impact__c.field-meta.xml
<CustomField>
    <fullName>What_is_potential_existing_rev_impact__c</fullName>
    <label>What is potential existing rev impact?</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>