force-app/main/default/objects/Business_Continuity__c/fields/What_is_the_total_of_stores_closed__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_total_of_stores_closed__c</fullName>
    <label>What is the total # of stores closed?</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>