force-app/main/default/objects/Business_Continuity__c/fields/X5_Areas_of_support_or_emerging_needs__c.field-meta.xml
<CustomField>
    <fullName>X5_Areas_of_support_or_emerging_needs__c</fullName>
    <label>5) Areas of support or emerging needs</label>
    <type>TextArea</type>
</CustomField>