force-app/main/default/objects/Business_Continuity__c/validationRules/Products_at_Risk_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Products_at_Risk_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
INCLUDES(Products_at_Risk__c , &apos;Hosted Solutions&apos;),
ISBLANK(Product_at_Risk_Comments__c),
($Profile.Name &lt;&gt; &quot;System Administrator&quot;),
($Profile.Name &lt;&gt; &quot;04 NSC UI Administrator&quot;)
)</errorConditionFormula>
    <errorDisplayField>Product_at_Risk_Comments__c</errorDisplayField>
    <errorMessage>Please provide the Hosted Solutions product in the comments field.</errorMessage>
</ValidationRule>