force-app/main/default/objects/Business_Continuity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>